# sifter-kys-bot

./: .gitignore  .gitleaks.toml  BOT_AUDIT_AND_STATUS.md  CLAUDE.md  CONSOLIDATED_SUPABASE_SCHEMA.sql  NetworkGraph.jsx  PROD-SETUP.md  README.md  TESTING_GUIDE.md  app.py  batch_analyzer.py  docker-compose.yml  nlp_disambiguator.py  package-lock.json  package.json  pnpm-lock.yaml  pump_detector.py  rally_tweet_connector.py  requirements.txt  start-dev.sh  watchlist_db.py
Backend/: .env.example  .gitignore  Dockerfile  Makefile  add_telegram_tables.sql  app.py  auth.py  celery_app.py  config.py  cron_jobs.py  database_schema.sql  ecosystem.config.js  expanded_sna.py  interaction_analyzer.py  migrate_add_telegram.py  migrate_db.py  nginx.conf  nlp_disambiguator.py  notification_elite15_autotrade_patch.sql  pump_detector.py  pyproject.toml  rally_tweet_connector.py  redis.conf  requirements.txt  sna_analyzer.py  supabase_schema.sql  supabase_schema.sql.bak  tweet_extractor.py  twitter_api_pool.py  utils.py  wallet_analytics.duckdb  wallet_analytics.duckdb.wal  wallet_analyzer.py
Backend/analyzers/: __init__.py  batch_analyzer.py  nlp_disambiguator.py  pump_detector.py
Backend/db/: __init__.py  watchlist_db.py
Backend/docs/: repository-pattern-migration.md  rq-to-celery-migration.md
Backend/repositories/: __init__.py  base.py  registry.py  supabase_repos.py
Backend/routes/: __init__.py  abm_state_route.py  analyze.py  auth.py  diary_routes.py  health.py  helius_webhook.py  kill_switch.py  recents.py  referral_points_routes.py  simulator_routes.py  support.py  (+6 more)
(+330 files in other folders)
